# scrobblelist

./: .env-example  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/labels/: priority.json  type.json
scrobblelist/: cli.py  lastfm.py  utils.py
