[tool.poetry]
name = "scrobblelist"
version = "0.0.3"
description = "Last.fm scrobbler for :slowpoke:"
authors = ["pythoninja <pythoninja@users.noreply.github.com>"]
license = "MIT"

readme = "README.md"

homepage = "https://github.com/pythoninja/scrobblelist"
repository = "https://github.com/pythoninja/scrobblelist"
documentation = "https://scrobblelist.netlify.app"

keywords = ["last.fm", "scrobbler"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: MIT License",
]

[tool.poetry.dependencies]
python = "^3.8"
tinytag = "^1.10.0"
pylast = "^5.2.0"
click = "^7.1.1"

[tool.poetry.dev-dependencies]
pre-commit = "^3.5.0"


[tool.poetry.scripts]
scrobblelist = 'scrobblelist.cli:cli'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
